# LaekningPharmacy

./: LICENSE  LaekningSln.sln  README.md  azure-pipelines-1.yml  azure-pipelines.yml
Laekning/: Laekning.csproj  LaekningSln - Shortcut.lnk  Program.cs  appsettings.Development.json  appsettings.json
Laekning.Tests/: CartPageTests.cs  CartTests.cs  HomeControllerTests.cs  Laekning.Tests.csproj  NavigationMenuViewComponentTests.cs  PageLinkTagHelperTests.cs  UnitTest1.cs
Laekning/Components/: CartSummaryViewComponent.cs  NavigationMenuViewComponent.cs  UrlExtensions.cs
Laekning/Controllers/: AccountController.cs  HomeController.cs  OrderController.cs  PublicController.cs
Laekning/Helpers/: SessionExtensions.cs
Laekning/Infrastructure/: PageLinkTagHelper.cs  SessionExtensions.cs
Laekning/Migrations/: 20250805190357_Initial.Designer.cs  20250805190357_Initial.cs  20250816140720_UpdatedOrderModel.Designer.cs  20250816140720_UpdatedOrderModel.cs  StoreDbContextModelSnapshot.cs
Laekning/Models/: AppIdentityDbContext.cs  Cart.cs  EFOrderRepository.cs  EFStoreRepository.cs  IOrderRepository.cs  IStoreRepository.cs  IdentitySeedData.cs  Order.cs  Product.cs  SeedData.cs  SessionCart.cs  StoreDbContext.cs  SupportOption.cs
Laekning/Pages/: Cart.cshtml  Cart.cshtml.cs  Completed.cshtml  Error.cshtml  Index.cshtml.cs  Prescription_OCR.cshtml  Prescription_OCR.cshtml.cs  ProductDetails.cshtml  ProductDetails.cshtml.cs  Recommendations.cshtml  (+7 more)
LaekningEventHub/: CMakeLists.txt  main.cpp  vcpkg.json
LaekningGenAIRecommendationModule/: function_app.py  requirements.txt
(+30 files in other folders)
